# aoc-rs

./: Cargo.toml
15/: Cargo.toml  README.md
21/: Cargo.toml  README.md
src/: lib.rs  resources.rs
