[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
num-integer = "0.1.44"
partition = "0.1.2"
strum = "0.23"
strum_macros = "0.23"
aoc = { path = "../" }
array-init = "2.0.0"
lazy_static = "1.4.0"
regex = "1.5.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
